# advent-of-code-2020

./: README.md
day-1/: Main.hs  day-1.cabal
day-10/: Main.hs  day-10.cabal  default.nix
day-2/: Main.hs
day-2_/: Main.hs  day-2.cabal
day-3/: Main.hs  day-3.cabal
day-4/: Main.hs  day-4.cabal  default.nix
day-5/: Main.hs  day-5.cabal  default.nix
day-6/: Main.hs  day-6.cabal  default.nix
day-7/: Main.hs  day-7.cabal  default.nix
day-8/: Main.hs  day-8.cabal  input.txt
day-9/: Main.hs  day-9.cabal  default.nix
