name:                advent-of-code
synopsis:            Project synopsis
version:             0.0.1.0
homepage:            https://github.com/abradley2/advent-of-code
license:             BSD3
author:              Tony
maintainer:          Tony
copyright:           Tony
category:            Package.Category
build-type:          Simple
cabal-version:       >=2.0

executable day-4
  main-is:            Main.hs
  default-language:   Haskell2010
  ghc-options:        -threaded -O2
  mixins:             base hiding (Prelude)
                    , relude (Relude as Prelude
                             , Relude.Extra
                             )
  build-depends:      base
                    , mtl
                    , relude
                    , bytestring
                    , text
                    , parsec

